--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
     <meta name="msapplication-TileColor" content="#317EFB" />
     <meta name="msapplication-config" content="./browserconfig.xml" />
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
+
     <!-- LinkedIn Meta Tags (Open Graph covers LinkedIn as well) -->
     <meta property="linkedin:card" content="summary_large_image" />
     <meta property="linkedin:site" content="@neerajnagar" />
@@ -45,8 +50,8 @@
     <meta property="instagram:title" content="Neeraj Nagar | Web Developer Portfolio" />
     <meta property="instagram:description" content="Professional portfolio showcasing my skills, projects, and experience as a developer." />
     <meta property="instagram:image" content="https://neerajnagar.com/og-img.jpg" />
-    <script type="module" crossorigin src="./assets/js/index-pH3IdSon.js"></script>
-    <link rel="stylesheet" crossorigin href="./assets/css/index-BIRBc-Bk.css">
+    <script type="module" crossorigin src="./assets/js/index-Bh4sRMIm.js"></script>
+    <link rel="stylesheet" crossorigin href="./assets/css/index-DRBSqHFz.css">
   </head>
   <body>
     <div id="root"></div>
