--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     <meta name="description" content="Professional portfolio showcasing my skills, projects, and experience as a developer." />
     <meta name="keywords" content="portfolio, web developer, projects, skills, experience" />
     <meta name="author" content="Neeraj Nagar" />
-    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="theme-color" content="#ffffff">
+    
     <link rel="canonical" href="https://neerajnagar.com" />
     <title>Neeraj Nagar | Web Developer Portfolio</title>
 
