--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta name="author" content="Neeraj Nagar" />
     
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="./favicon.ico">
-    <link rel="icon" type="image/svg+xml" href="./favicon.svg">
-    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="./favicon-96x96.png">
-    <link rel="manifest" href="./site.webmanifest">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="manifest" href="/site.webmanifest">
     <meta name="theme-color" content="#ffffff">
     
     <link rel="canonical" href="https://neerajnagar.com" />
@@ -58,8 +58,8 @@
     <meta property="instagram:title" content="Neeraj Nagar | Web Developer Portfolio" />
     <meta property="instagram:description" content="Professional portfolio showcasing my skills, projects, and experience as a developer." />
     <meta property="instagram:image" content="https://neerajnagar.com/og-img.jpg" />
-    <script type="module" crossorigin src="./assets/js/index-C-35oCIf.js"></script>
-    <link rel="stylesheet" crossorigin href="./assets/css/index-u6vta3qR.css">
+    <script type="module" crossorigin src="/assets/js/index-DXvCBBEM.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/css/index-xVyfeRyu.css">
   </head>
   <body>
     <div id="root"></div>
