--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- LinkedIn Meta Tags (Open Graph covers LinkedIn as well) -->
     <meta property="linkedin:card" content="summary_large_image" />
@@ -58,8 +60,8 @@
     <meta property="instagram:title" content="Neeraj Nagar | Web Developer Portfolio" />
     <meta property="instagram:description" content="Professional portfolio showcasing my skills, projects, and experience as a developer." />
     <meta property="instagram:image" content="https://neerajnagar.com/og-img.jpg" />
-    <script type="module" crossorigin src="/assets/js/index-DMNN5RB8.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/css/index-zF3RWndQ.css">
+    <script type="module" crossorigin src="/assets/js/index-DAzjLZIM.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/css/index-imx82dAW.css">
   </head>
   <body>
     <div id="root"></div>
